dev Added configurable pollution on detonation

--- a/configurable-nukes/locale/en/locale.cfg
+++ b/configurable-nukes/locale/en/locale.cfg
@@ -3,4 +3,10 @@ configurable-nukes-area-multiplier=Area of Effect Multiplier
 configurable-nukes-damage-multiplier=Damage Multiplier
 configurable-nukes-repeat-multiplier=Repeat Multiplier
 
+configurable-nukes-pollution=Pollution
+
 [mod-setting-description]
+configurable-nukes-pollution=Amount of pollution emitted per repeat
+
+[entity-name]
+atomic-rocket=Atomic Bomb
