feature/0.3.x Made atomic bombs/rockets AoE and Magnitude affected by quality; added 'atomic-warhead' & ICBMS; added so many settings; introduced an internal version system; added new technologies for nuclear damage research, ICBMS, guidance systems, and warheads; added a thumbnail

--- a/configurable-nukes/locale/en/items.cfg
+++ b/configurable-nukes/locale/en/items.cfg
@@ -4,6 +4,19 @@ configurable-nukes-cooldown-modifier=[item=atomic-bomb]Cooldown modifier
 configurable-nukes-atomic-bomb-stack-size=[item=atomic-bomb]Stack size
 configurable-nukes-atomic-bomb-weight-modifier=[item=atomic-bomb]Weight modifier
 
+configurable-nukes-atomic-warhead-cooldown-modifier=[item=atomic-warhead]Cooldown modifier
+configurable-nukes-atomic-warhead-stack-size=[item=atomic-warhead]Stack size
+configurable-nukes-atomic-warhead-weight-modifier=[item=atomic-warhead]Weight modifier
+
+configurable-nukes-rocket-control-unit-range-modifier=[item=rocket-control-unit]Range modifier
+configurable-nukes-rocket-control-unit-cooldown-modifier=[item=rocket-control-unit]Cooldown modifier
+configurable-nukes-rocket-control-unit-stack-size=[item=rocket-control-unit]Stack size
+configurable-nukes-rocket-control-unit-weight-modifier=[item=rocket-control-unit]Weight modifier
+
 [mod-setting-description]
 configurable-nukes-cooldown-modifier=Multiplier of the cooldown between shots.\n\ni.e. The lower this number, the faster nukes can be fired.
-configurable-nukes-atomic-bomb-weight-modifier=Multiplier of the default weight of a rocket\n\n i.e. default = 1.5 * tons
+configurable-nukes-atomic-bomb-weight-modifier=Multiplier of the default weight of a atomic-rocket\n\n i.e. default = 1.5 * tons
+
+configurable-nukes-atomic-warhead-weight-modifier=Multiplier of the default weight of a atomic  warhead\n\n i.e. default = 1 * tons
+
+configurable-nukes-rocket-control-unit-weight-modifier=Multiplier of the default weight of a rocket-control-unit\n\n i.e. default = 0.2 * tons
