--- a/configurable-nukes/locale/en/locale.cfg
+++ b/configurable-nukes/locale/en/locale.cfg
@@ -1,2 +1,41 @@
+[ammo-category-name]
+nuclear=Nuclear
+
+[ammo-category]
+nuclear=Nuclear
+
 [entity-name]
 atomic-rocket=Atomic Bomb
+
+[entity-description]
+atomic-warhead=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote]
+
+[item-name]
+atomic-warhead=Atomic Warhead
+ICBM-remote=ICBM remote
+rocket-control-unit=Rocket Control Unit
+
+[item-description]
+atomic-warhead=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote]
+
+[modifier-description]
+nuclear-damage-bonus=Nuclear damage: +__1__
+icbm-guidance-damage-bonus=Deviation Chance: __1__
+
+[recipe-name]
+atomic-warhead=Atomic Warhead
+rocket-contorl-unit=Rocket Control Unit
+
+[technology-name]
+atomic-warhead=Atomic Warhead
+nuclear-damage=Nuclear Weapons Damage
+guidance-systems=Guidance Systems
+rocket-control-unit=Rocket Control Unit
+icbms=Intercontinental Ballistic Missiles
+
+[technology-description]
+atomic-warhead=Allows the crafting of atomic warheads[item=atomic-warhead]; launchable via a rocket silo[entity=rocket-silo] at a designated target via the ICBM remote[item=ICBM-remote]
+nuclear-damage=Increases the damage of nuclear based weaponry.
+icbms=Unlocks the ability to use rocket silos for more than just logistics via the [item=ICBM-remote]
+guidance-systems=Improves the guidance systems of ICBMS: reduces the target deviation chance, and increases the top speed at which ICBMs can travel.
+rocket-control-unit=Allows the crafting of rocket control units [item=rocket-control-unit]
