--- a/configurable-nukes/locale/en/recipe.cfg
+++ b/configurable-nukes/locale/en/recipe.cfg
@@ -3,6 +3,20 @@ configurable-nukes-atomic-bomb-crafting-time=[item=atomic-bomb]Atomic Bomb craft
 configurable-nukes-atomic-bomb-input-multiplier=[item=atomic-bomb]Input multiplier
 configurable-nukes-atomic-bomb-result-count=[item=atomic-bomb]Result count
 
+configurable-nukes-atomic-warhead-crafting-time=[item=atomic-warhead]Atomic Warhead crafting time
+configurable-nukes-atomic-warhead-input-multiplier=[item=atomic-warhead]Input multiplier
+configurable-nukes-atomic-warhead-result-count=[item=atomic-warhead]Result count
+
+configurable-nukes-rocket-control-unit-crafting-time=[item=rocket-control-unit]Rocket control unit crafting time
+configurable-nukes-rocket-control-unit-input-multiplier=[item=rocket-control-unit]Input multiplier
+configurable-nukes-rocket-control-unit-result-count=[item=rocket-control-unit]Result count
+
 [mod-setting-description]
 configurable-nukes-atomic-bomb-crafting-time=Crafting time in seconds
 configurable-nukes-atomic-bomb-result-count=Number of items created per crafting cycle
+
+configurable-nukes-atomic-warhead-crafting-time=Crafting time in seconds
+configurable-nukes-atomic-warhead-result-count=Number of items created per crafting cycle
+
+configurable-nukes-rocket-control-unit-crafting-time=Crafting time in seconds
+configurable-nukes-rocket-control-unit-result-count=Number of items created per crafting cycle
