--- a/configurable-nukes/locale/en/runtime-global.cfg
+++ b/configurable-nukes/locale/en/runtime-global.cfg
@@ -1,5 +1,24 @@
 [mod-setting-name]
-configurable-nukes-pollution=Pollution
+configurable-nukes-atomic-bomb-rocket-launchable=[item=atomic-bomb]Launchable via rocket-silo
+configurable-nukes-pollution=[item=atomic-bomb]Pollution
+configurable-nukes-atomic-warhead-pollution=[item=atomic-warhead]Pollution
+
+configurable-nukes-pin-targets=[item=ICBM-remote]Pin target
+configurable-nukes-do-icbms-reveal-target=[item=ICBM-remote]Reveal launch target
+
+configurable-nukes-icbms-perfect-guidance=[item=ICBM-remote]Perfect guidance
+configurable-nukes-icbms-planet-magnitude-affects-travel-time=[item=ICBM-remote]Planet magnitude affects travel time
+configurable-nukes-icbms-magnitude-modifier=[item=ICBM-remote]Planet magnitude multiplier
+configurable-nukes-icbms-travel-multiplier=[item=ICBM-remote]ICBM Travel multiplier
+configurable-nukes-icbms-guidance-deviation-threshold=[item=ICBM-remote]ICBM guidance deviation threshold
 
 [mod-setting-description]
-configurable-nukes-pollution=Amount of pollution emitted per repeat
+configurable-nukes-atomic-bomb-rocket-launchable=Whether atomic-bombs can be launched as payload from a rocket-silo.
+# configurable-nukes-pollution=Amount of pollution emitted per repeat.
+# configurable-nukes-atomic-warhead-pollution=Amount of pollution emitted per repeat.
+configurable-nukes-pin-targets=Whether to create a map pin at the designated target, or not, when an ICBM launches successfully.
+configurable-nukes-do-icbms-reveal-target=Whether to reveal the map at the designated target, or not, when an ICBM launches successfully.
+
+configurable-nukes-icbms-planet-magnitude-affects-travel-time=The larger the planet, the longer it will take to reach the given destination.
+configurable-nukes-icbms-travel-multiplier=Multiplier of the time it takes for an ICBM to reach its target after reaching orbit.\n\nSet to 0 for instant delivery.
+configurable-nukes-icbms-guidance-deviation-threshold=Base threshold (not including guidance systems research) by which an ICBM will remain on target. Higher values result in more consistent and precise strikes without needing additional research. Research will however fill in the remaining chance such that at guidance systems 10, ICBMs always strike true\n\ni.e.e 1 will never deviate; 0 will deviate at every opportunity.
