--- a/configurable-nukes/locale/en/startup.cfg
+++ b/configurable-nukes/locale/en/startup.cfg
@@ -1,12 +1,96 @@
 [mod-setting-name]
+configurable-nukes-nuclear-ammo-category=[technology=nuclear-damage]Enable nuclear ammo category
+
+configurable-nukes-quality-base-multiplier=Quality base multiplier
+
 configurable-nukes-area-multiplier=[item=atomic-bomb]Area of Effect Multiplier
 configurable-nukes-damage-multiplier=[item=atomic-bomb]Damage Multiplier
 configurable-nukes-repeat-multiplier=[item=atomic-bomb]Repeat Multiplier
 configurable-nukes-fire-wave=[item=atomic-bomb]Fire Wave
 configurable-nukes-atomic-bomb-recipe=[item=atomic-bomb]Recipe
 configurable-nukes-atomic-bomb-recipe-allow-none=[item=atomic-bomb]Allow no recipe
+configurable-nukes-atomic-bomb-crafting-machine=[item=atomic-bomb]Atomic bomb crafting machine
+configurable-nukes-atomic-bomb-additional-crafting-machines=[item=atomic-bomb]Additional atomic bomb crafting machines
+
+configurable-nukes-atomic-warhead-enabled=[item=atomic-warhead]Enable atomic-warheads
+configurable-nukes-atomic-warhead-area-multiplier=[item=atomic-warhead]Area of Effect Multiplier
+configurable-nukes-atomic-warhead-damage-multiplier=[item=atomic-warhead]Damage Multiplier
+configurable-nukes-atomic-warhead-repeat-multiplier=[item=atomic-warhead]Repeat Multiplier
+configurable-nukes-atomic-warhead-fire-wave=[item=atomic-warhead]Fire Wave
+configurable-nukes-atomic-warhead-recipe=[item=atomic-warhead]Recipe
+configurable-nukes-atomic-warhead-recipe-allow-none=[item=atomic-warhead]Allow no recipe
+configurable-nukes-atomic-warhead-crafting-machine=[item=atomic-warhead]Atomic warhead crafting machine
+configurable-nukes-atomic-warhead-additional-crafting-machines=[item=atomic-warhead]Additional atomic warhead crafting machines
+
+configurable-nukes-atomic-warhead-research-prerequisites=[item=atomic-warhead]Prerequisite technology to atomic-warhead research
+configurable-nukes-atomic-warhead-research-ingredients=[item=atomic-warhead]Science packs required for atomic-warhead reseach
+configurable-nukes-atomic-warhead-research-time=[item=atomic-warhead]Time per science pack for atomic-warhead research
+configurable-nukes-atomic-warhead-research-count=[item=atomic-warhead]Research count for atomic-warhead research
+
+configurable-nukes-icbms-research-prerequisites=[technology=icbms]Prerequisite technology to ICBMs research
+configurable-nukes-icbms-research-ingredients=[technology=icbms]Science packs required for ICBMs reseach
+configurable-nukes-icbms-research-time=[technology=icbms]Time per science pack for ICBMs research
+configurable-nukes-icbms-research-count=[technology=icbms]Research count for ICBMs research
+
+configurable-nukes-rocket-control-unit-recipe=[item=rocket-control-unit]Recipe
+configurable-nukes-rocket-control-unit-recipe-allow-none=[item=rocket-control-unit]Allow no recipe
+configurable-nukes-rocket-control-unit-crafting-machine=[item=rocket-control-unit]Rocket control unit crafting machine
+configurable-nukes-rocket-control-unit-additional-crafting-machines=[item=rocket-control-unit]Additional rocket control unit crafting machines
+
+configurable-nukes-rocket-control-unit-research-prerequisites=[item=rocket-control-unit]Prerequisite technology to rocket-control-unit research
+configurable-nukes-rocket-control-unit-research-ingredients=[item=rocket-control-unit]Science packs required for rocket-control-unit reseach
+configurable-nukes-rocket-control-unit-research-time=[item=rocket-control-unit]Time per science pack for rocket-control-unit research
+configurable-nukes-rocket-control-unit-research-count=[item=rocket-control-unit]Research count for rocket-control-unit research
+
+configurable-nukes-nuclear-weapons-research-damage-modifier=[technology=nuclear-damage]Nuclear weapons damage modifier
+configurable-nukes-nuclear-weapons-research-formula=[technology=nuclear-damage]Nuclear wepaons research cost formula
+configurable-nukes-nuclear-weapons-research-prerequisites=[technology=nuclear-damage]Prerequisite technology to nuclear weapons damage research
+configurable-nukes-nuclear-weapons-research-ingredients=[technology=nuclear-damage]Science packs required for nuclear weapons damage reseach
+configurable-nukes-nuclear-weapons-research-time=[technology=nuclear-damage]Time per science pack for nuclear weapons damage research
+
+configurable-nukes-guidance-systems-research-modifier=[technology=guidance-systems]Guidance systems targeting deviation modifier
+configurable-nukes-guidance-systems-research-formula=[technology=guidance-systems]Guidance systems research cost formula
+configurable-nukes-guidance-systems-research-prerequisites=[technology=guidance-systems]Prerequisite technology to guidance systems targeting research
+configurable-nukes-guidance-systems-research-ingredients=[technology=guidance-systems]Science packs required for guidance systems targeting reseach
+configurable-nukes-guidance-systems-research-time=[technology=guidance-systems]Time per science pack for guidance systems targeting research
 
 [mod-setting-description]
+configurable-nukes-nuclear-ammo-category=Creates a distinct ammo category for nuclear weapons, i.e. atomic bombs and warheads; also adds an infinite research for nuclear weapons damage.
+
+configurable-nukes-quality-base-multiplier=The base value which is raised to the quality level; which is then used to multiply the given quality affected property (AoE, Repeat, Damage)
+
 configurable-nukes-fire-wave=When enabled, will set things on fire within the blast radius.
 configurable-nukes-atomic-bomb-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...\n\ne.g.\n    processing-unit=10,explosives=10,uranium-235=30
 configurable-nukes-atomic-bomb-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the vanilla recipe will be used.\n\nWhen enabled, allows for free crafting of nukes if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-atomic-bomb-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
+
+configurable-nukes-atomic-warhead-enabled=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote]
+configurable-nukes-atomic-warhead-fire-wave=When enabled, will set things on fire within the blast radius.
+configurable-nukes-atomic-warhead-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...\n\ne.g.\n    processing-unit=100,explosives=100,uranium-235=300
+configurable-nukes-atomic-warhead-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-atomic-warhead-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
+
+configurable-nukes-atomic-warhead-research-prerequisites=Defines the technologies required to research atomic-warheads. Expected syntax is as follows:\n\n    technology-name-1,technology-name-2, etc...\n\ne.g.\n    "atomic-bomb,rocket-silo,space-science-pack"
+configurable-nukes-atomic-warhead-research-ingredients=Defines the science-packs and amounts of each required for one research cycle. Expected syntax is as follows:\n\n    science-pack-name-1=amount-1,science-pack-name-2=amount-2, etc...\n\ne.g.\n    "automation-science-pack=1,logistic-science-pack=1,chemical-science-pack=1,military-science-pack=1.utility-science-pack=1,production-science-pack=1,space-science-pack=1"
+configurable-nukes-atomic-warhead-research-time=How much time one unit takes to research. In a lab with a crafting speed of 1, it corresponds to the number of seconds.
+configurable-nukes-atomic-warhead-research-count=Defines how many research cycles are needed to complete the research.
+
+configurable-nukes-icbms-research-prerequisites=Defines the technologies required to research ICBMs. Expected syntax is as follows:\n\n    technology-name-1,technology-name-2, etc...\n\ne.g.\n    "production-science-pack,utility-science-pack,space-science-pack"
+configurable-nukes-icbms-research-ingredients=Defines the science-packs and amounts of each required for one research cycle. Expected syntax is as follows:\n\n    science-pack-name-1=amount-1,science-pack-name-2=amount-2, etc...\n\ne.g.\n    "automation-science-pack=1,logistic-science-pack=1,chemical-science-pack=1,military-science-pack=1.utility-science-pack=1,production-science-pack=1,space-science-pack=1"
+configurable-nukes-icbms-research-time=How much time one unit takes to research. In a lab with a crafting speed of 1, it corresponds to the number of seconds.
+configurable-nukes-icbms-research-count=Defines how many research cycles are needed to complete the research.
+
+configurable-nukes-rocket-control-unit-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...\n\ne.g.\n    processing-unit=2,speed-module=1,radar=1,battery=4
+configurable-nukes-rocket-control-unit-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-rocket-control-unit-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
+
+configurable-nukes-rocket-control-unit-research-prerequisites=Defines the technologies required to research rocket-control-units. Expected syntax is as follows:\n\n    technology-name-1,technology-name-2, etc...\n\ne.g.\n    "rocket-silo,space-science-pack"
+configurable-nukes-rocket-control-unit-research-ingredients=Defines the science-packs and amounts of each required for one research cycle. Expected syntax is as follows:\n\n    science-pack-name-1=amount-1,science-pack-name-2=amount-2, etc...\n\ne.g.\n    "automation-science-pack=1,logistic-science-pack=1,chemical-science-pack=1,military-science-pack=1.utility-science-pack=1,production-science-pack=1,space-science-pack=1"
+configurable-nukes-rocket-control-unit-research-time=How much time one unit takes to research. In a lab with a crafting speed of 1, it corresponds to the number of seconds.
+configurable-nukes-rocket-control-unit-research-count=Defines how many research cycles are needed to complete the research.
+
+configurable-nukes-nuclear-weapons-research-damage-modifier=Percentage amount each level increases the damage of nuclear weapons.
+configurable-nukes-nuclear-weapons-research-formula=Formula by which the reserach cost for a given level is calculated.\n\ndefaualt, 2^(L-1)*1000, where 'L' is the level to be researched.\n\ne.g. 1 = 1000, 2= 2000, 3 = 4000, 4 = 8000, etc..\n\n See https://lua-api.factorio.com/stable/types/MathExpression.html for more information.
+configurable-nukes-nuclear-weapons-research-prerequisites=Defines the technologies required to research nuclear weapons damage. Expected syntax is as follows:\n\n    technology-name-1,technology-name-2, etc...\n\ne.g.\n    "atomic-bomb,rocket-silo,space-science-pack"
+configurable-nukes-nuclear-weapons-research-ingredients=Defines the science-packs and amounts of each required for one research cycle. Expected syntax is as follows:\n\n    science-pack-name-1=amount-1,science-pack-name-2=amount-2, etc...\n\ne.g.\n    "automation-science-pack=1,logistic-science-pack=1,chemical-science-pack=1,military-science-pack=1.utility-science-pack=1,production-science-pack=1,space-science-pack=1"
+configurable-nukes-nuclear-weapons-research-time=How much time one unit takes to research. In a lab with a crafting speed of 1, it corresponds to the number of seconds.
