feature/0.4.x Added 'Allow Targeting Origin' setting for preventing, or allowing, launches at the origin in the event of no coordinate signals provided; updated some locale messages to reflect circuit network capabilites; added settings for toggling manual and circuit launched ICBM messages, and circuit launched ICBM target pins; added automatic compatability for 'Nuclear Science' by atanvarno

--- a/configurable-nukes/locale/en/locale.cfg
+++ b/configurable-nukes/locale/en/locale.cfg
@@ -8,7 +8,7 @@ nuclear=Nuclear
 atomic-rocket=Atomic Bomb
 
 [entity-description]
-atomic-warhead=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote]
+atomic-warhead=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote] or via a circuit network.
 
 [item-name]
 atomic-warhead=Atomic Warhead
@@ -16,7 +16,7 @@ ICBM-remote=ICBM remote
 rocket-control-unit=Rocket Control Unit
 
 [item-description]
-atomic-warhead=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote]
+atomic-warhead=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote] or via a circuit network.
 
 [modifier-description]
 nuclear-damage-bonus=Nuclear damage: +__1__
@@ -34,7 +34,7 @@ rocket-control-unit=Rocket Control Unit
 icbms=Intercontinental Ballistic Missiles
 
 [technology-description]
-atomic-warhead=Allows the crafting of atomic warheads[item=atomic-warhead]; launchable via a rocket silo[entity=rocket-silo] at a designated target via the ICBM remote[item=ICBM-remote]
+atomic-warhead=Allows the crafting of atomic warheads[item=atomic-warhead]; launchable via a rocket silo[entity=rocket-silo] at a designated target via the ICBM remote[item=ICBM-remote] or via a circuit network.
 nuclear-damage=Increases the damage of nuclear based weaponry.
 icbms=Unlocks the ability to use rocket silos for more than just logistics via the [item=ICBM-remote]
 guidance-systems=Improves the guidance systems of ICBMS: reduces the target deviation chance, and increases the top speed at which ICBMs can travel.
