bug-fix/0.4.x Restored/added explicit compatibility with 'Mushroom Cloud Reborn'; Added additional runtime damage modifier and damage addition settings

--- a/configurable-nukes/locale/en/runtime-global.cfg
+++ b/configurable-nukes/locale/en/runtime-global.cfg
@@ -3,6 +3,20 @@ configurable-nukes-atomic-bomb-rocket-launchable=[item=atomic-bomb]Launchable vi
 configurable-nukes-pollution=[item=atomic-bomb]Pollution
 configurable-nukes-atomic-warhead-pollution=[item=atomic-warhead]Pollution
 
+configurable-nukes-atomic-bomb-base-damage-modifier=[item=atomic-bomb]Base damage modifier
+configurable-nukes-atomic-bomb-base-damage-addition=[item=atomic-bomb]Base damage addition
+# configurable-nukes-atomic-bomb-base-damage-radius-modifier=[item=atomic-bomb]Base radius modifier
+configurable-nukes-atomic-bomb-bonus-damage-modifier=[item=atomic-bomb]Bonus damage modifier
+configurable-nukes-atomic-bomb-bonus-damage-addition=[item=atomic-bomb]Bonus damage addition
+# configurable-nukes-atomic-bomb-bonus-damage-radius-modifier=[item=atomic-bomb]Bonus radius modifier
+
+configurable-nukes-atomic-warhead-base-damage-modifier=[item=atomic-warhead]Base damage modifier
+configurable-nukes-atomic-warhead-base-damage-addition=[item=atomic-warhead]Base damage addition
+# configurable-nukes-atomic-warhead-base-damage-radius-modifier=[item=atomic-warhead]Base radius modifier
+configurable-nukes-atomic-warhead-bonus-damage-modifier=[item=atomic-warhead]Bonus damage modifier
+configurable-nukes-atomic-warhead-bonus-damage-addition=[item=atomic-warhead]Bonus damage addition
+# configurable-nukes-atomic-warhead-bonus-damage-radius-modifier=[item=atomic-warhead]Bonus radius modifier
+
 configurable-nukes-pin-targets=[item=ICBM-remote]Pin target
 configurable-nukes-do-icbms-reveal-target=[item=ICBM-remote]Reveal launch target
 configurable-nukes-icbms-print-flight-messages=[item=ICBM-remote]Print flight messages
