feature/0.5.x Added compatibility with 'Space-Exploration' (SE); Added IPBMs (SA and SE) and ISBMS (SE); added ipbm-rocket-silo for firing IPBMs and ISBMs; added advanced-rocket-control-unit recipe; fixed a non-recoverable error when target location value was too large (limit of function was negative infinity, not positive infinity); fixed some settings bugs; added 'fluid' as a possible recipie input; added ballistic-rocket-part and related recipes; in SA, ballistic-rocket-parts benefit from rocket-part productivity research; increased guidance systems research level to 13; seperated guidance systems into deviation modifier and top-speed modifier; (SA) rocket-silos and ipbm-rocket-silos can be placed on platforms, and can be fired while travelling; tweaked/altered deviation calculations to be more forgiving at extreme distances; updated (re)init messages to actually use localised strings; added data migration message on (re)init; tested/added compatibility with temporary_nuclear_scorchmark by CocaineTM

--- a/configurable-nukes/locale/en/gui.cfg
+++ b/configurable-nukes/locale/en/gui.cfg
@@ -4,3 +4,5 @@ signal_launch=Launch Signal
 signal_x=X Coord
 signal_y=Y Coord
 signal_origin_override=Origin Override
+planet=Planet
+list-item=[planet=__1__] __1__
