--- a/configurable-nukes/locale/en/recipe.cfg
+++ b/configurable-nukes/locale/en/recipe.cfg
@@ -11,6 +11,9 @@ configurable-nukes-rocket-control-unit-crafting-time=[item=rocket-control-unit]R
 configurable-nukes-rocket-control-unit-input-multiplier=[item=rocket-control-unit]Input multiplier
 configurable-nukes-rocket-control-unit-result-count=[item=rocket-control-unit]Result count
 
+configurable-nukes-advanced-rocket-control-unit-crafting-time=[item=rocket-control-unit]Advanced Recipe crafting time
+configurable-nukes-advanced-rocket-control-unit-result-count=[item=rocket-control-unit]Advanced Recipe result count
+
 [mod-setting-description]
 configurable-nukes-atomic-bomb-crafting-time=Crafting time in seconds
 configurable-nukes-atomic-bomb-result-count=Number of items created per crafting cycle
@@ -20,3 +23,6 @@ configurable-nukes-atomic-warhead-result-count=Number of items created per craft
 
 configurable-nukes-rocket-control-unit-crafting-time=Crafting time in seconds
 configurable-nukes-rocket-control-unit-result-count=Number of items created per crafting cycle
+
+configurable-nukes-advanced-rocket-control-unit-crafting-time=Crafting time in seconds
+configurable-nukes-advanced-rocket-control-unit-result-count=Number of items created per crafting cycle
