--- a/configurable-nukes/locale/en/runtime-global.cfg
+++ b/configurable-nukes/locale/en/runtime-global.cfg
@@ -23,11 +23,18 @@ configurable-nukes-do-icbms-reveal-target=[item=ICBM-remote]Reveal launch target
 configurable-nukes-icbms-print-launch-messages=[item=ICBM-remote]Print launch messages
 configurable-nukes-icbms-print-delivery-messages=[item=ICBM-remote]Print delivery messages
 
+configurable-nukes-icbms-allow-multisurface=[item=ICBM-remote]Allow multi-surface ICBM targeting
+configurable-nukes-icbms-multisurface-travel-time-modifier=[item=ICBM-remote]Multisurface travel time modifier
+configurable-nukes-multisurface-base-distance-modifier=[item=ICBM-remote]Multisurface base distance modifier
+configurable-nukes-multisurface-orbit-base-distance-modifier=[item=ICBM-remote]Multisurface orbit base distance modifier
+
+configurable-nukes-always-use-closest-silo=[item=ICBM-remote]Always use closest silo
 configurable-nukes-icbms-perfect-guidance=[item=ICBM-remote]Perfect guidance
 configurable-nukes-icbms-planet-magnitude-affects-travel-time=[item=ICBM-remote]Planet magnitude affects travel time
 configurable-nukes-icbms-magnitude-modifier=[item=ICBM-remote]Planet magnitude multiplier
 configurable-nukes-icbms-travel-multiplier=[item=ICBM-remote]ICBM Travel multiplier
 configurable-nukes-icbms-guidance-deviation-threshold=[item=ICBM-remote]ICBM guidance deviation threshold
+configurable-nukes-icbms-deviation-scaling-factor=[item=ICBM-remote]ICBM deviation scaling factor
 
 configurable-nukes-icbms-circuit-allow-targeting-origin=[item=constant-combinator]Allow Targeting Origin
 # configurable-nukes-icbms-circuit-print-flight-messages=[item=constant-combinator]Print circuit initiated flight messages
@@ -35,8 +42,15 @@ configurable-nukes-icbms-circuit-print-launch-messages=[item=constant-combinator
 configurable-nukes-icbms-circuit-print-delivery-messages=[item=constant-combinator]Print circuit initiated delivery messages
 configurable-nukes-icbms-circuit-print-pin-targets=[item=constant-combinator]Pin circuit designated targets
 
+configurable-nukes-num-surfaces-processed-per-tick=Number of surfaces processed per tick
+
 [mod-setting-description]
 configurable-nukes-atomic-bomb-rocket-launchable=Whether atomic-bombs can be launched as payload from a rocket-silo.
+
+configurable-nukes-icbms-allow-multisurface=Allows for a rocket-silo with a valid payload to initiate a launch against a surface that is different than the surface the rocket-silo is located on.\n\nIf enabled, allows ICBMs to function as IPBMs, albeit slower and less accurate.
+configurable-nukes-icbms-multisurface-travel-time-modifier=Multiplier of the time it takes for an ICBM, if enabled, or an IPBM to reach its target.
+configurable-nukes-multisurface-base-distance-modifier=Multiplier of the distance between planets. Derived as follows:\n\n- Each planet has a "distance" value from the sun\n- The inner planets are all 5 units apart\n- These 5 units equate to 15000 km of distance for each of their respective space-connections (not including connections to Aquilo)\n- Hence, 15000 / 5 = 3000\n\nSetting has no effect if space-age is not active.
+configurable-nukes-multisurface-orbit-base-distance-modifier=Multiplier of the distance from the orbit of a planet to its surface. Applies to launches from platforms in orbit around a planet, to the surface of the planet.
 
 configurable-nukes-pin-targets=Whether to create a map pin at the designated target, or not, when an ICBM launches successfully.
 configurable-nukes-do-icbms-reveal-target=Whether to reveal the map at the designated target, or not, when an ICBM launches successfully.
@@ -44,9 +58,12 @@ configurable-nukes-do-icbms-reveal-target=Whether to reveal the map at the desig
 configurable-nukes-icbms-print-launch-messages=Whether to display a message of the target destination and source rocket silo, or not, when an ICBM is manually launched successfully.
 configurable-nukes-icbms-print-delivery-messages=Whether to display a message of the target destination, or not, when a manually launched ICBM's payload is delivered.
 
+configurable-nukes-always-use-closest-silo=If enabled, the type of silo will not be considered when searching for a valid silo to fire from, and will use the closest silo to the target.\n\nIf disabled, rocket-silos in orbit or on the same surface as the target will be prioritized before ballistic rocket-silos, even if the ballistic rocket-silo would be closer to the designated target.
+
 configurable-nukes-icbms-planet-magnitude-affects-travel-time=The larger the planet, the longer it will take to reach the given destination.
 configurable-nukes-icbms-travel-multiplier=Multiplier of the time it takes for an ICBM to reach its target after reaching orbit.\n\nSet to 0 for instant delivery.
-configurable-nukes-icbms-guidance-deviation-threshold=Base threshold (not including guidance systems research) by which an ICBM will remain on target. Higher values result in more consistent and precise strikes without needing additional research. Research will however fill in the remaining chance such that at guidance systems 10, ICBMs always strike true\n\ni.e.e 1 will never deviate; 0 will deviate at every opportunity.
+configurable-nukes-icbms-guidance-deviation-threshold=Base threshold (not including guidance systems research) by which an ICBM will remain on target. Higher values result in more consistent and precise strikes without needing additional research. Research will however fill in the remaining chance such that at guidance systems 10, ICBMs always strike true\n\ni.e. 1 will never deviate; 0 will deviate at every opportunity.
+configurable-nukes-icbms-deviation-scaling-factor=Factor by which the deviation limit (distance) is raised to. Lower values have less deviation over longer distances; higher values have greater deviation over longer distances.\n\nFormula is as follows:\ndeviation_limit = (32 * (i ^ (math.pi / 6))) ^ deviation_scaling_factor\n\nWhere 'i' is the current deviation_check index, calculated as follows:\nnum_deviation_checks = math.floor(target_distance / (32 * 8))
 
 configurable-nukes-icbms-circuit-allow-targeting-origin=Target coordinates of {0,0} are disabled by default, as they also correspond with the absence of coordinate signals. This prevents the accidental launch of a rocket when only the launch signal is present and valid.\n\nWhen enabled, an additional, override signal is selectable from the rocket-silo GUI. When the override signal is greater than 0, the launch signal is greater than 0, and no coordinates were given, then the rocket will still launch, targeting {0,0}.\n\nBe sure you know what you are doing when you enable this.
 
@@ -54,3 +71,5 @@ configurable-nukes-icbms-circuit-allow-targeting-origin=Target coordinates of {0
 configurable-nukes-icbms-circuit-print-launch-messages=Whether to display a message of the target destination and source rocket silo, or not, when an ICBM is launched successfully via a circuit network.
 configurable-nukes-icbms-circuit-print-delivery-messages=Whether to display a message of the target destination, or not, when a circuit network launched ICBM's payload is delivered.
 configurable-nukes-icbms-circuit-print-pin-targets=Whether to create a map pin at the designated target, or not, when an ICBM is launched successfully via a circuit network.
+
+configurable-nukes-num-surfaces-processed-per-tick=The amount of surfaces to process per tick cycle.\n\ni.e. How many surfaces to check if a payload is ready to be delivered per tick cycle.\n\nThe higher the number, the more accurate payload delivery time will be - but may also reduce performance if set too high.
