--- a/configurable-nukes/locale/en/locale.cfg
+++ b/configurable-nukes/locale/en/locale.cfg
@@ -6,25 +6,63 @@ nuclear=Nuclear
 
 [entity-name]
 atomic-rocket=Atomic Bomb
+ipbm-rocket-silo=Interplanetary Ballistic Rocket Silo
+se-ipbm-rocket-silo=Ballistic Rocket Silo
 
 [entity-description]
 atomic-warhead=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote] or via a circuit network.
+ipbm-rocket-silo=Rocket silo capable of local orbital logistics, as well as launching and deliverying payloads across interplanetary distances.
+se-ipbm-rocket-silo=Rocket silo capable of launching and deliverying payloads across vast interplanetary and interstellar distances.
 
 [item-name]
 atomic-warhead=Atomic Warhead
 ICBM-remote=ICBM remote
 rocket-control-unit=Rocket Control Unit
+ipbm-rocket-silo=Interplanetary Ballistic Rocket Silo
+
+ipbm-rocket-part=Interplanetary Ballistic Rocket Part
+ipbm-rocket-part-basic=Interplanetary Ballistic Rocket Part
+ipbm-rocket-part-intermediate=Interplanetary Ballistic Rocket Part
+ipbm-rocket-part-advanced=Interplanetary Ballistic Rocket Part
+ipbm-rocket-part-beyond=Interplanetary Ballistic Rocket Part
+ipbm-rocket-part-beyond-2=Interplanetary Ballistic Rocket Part
+
+se-ipbm-rocket-part=Ballistic Rocket Part
+se-ipbm-rocket-part-basic=Ballistic Rocket Part
+se-ipbm-rocket-part-intermediate=Ballistic Rocket Part
+se-ipbm-rocket-part-advanced=Ballistic Rocket Part
+se-ipbm-rocket-part-beyond=Ballistic Rocket Part
 
 [item-description]
 atomic-warhead=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote] or via a circuit network.
+ipbm-rocket-silo=Rocket silo capable of local orbital logistics, as well as launching and deliverying payloads across interplanetary distances.
+se-ipbm-rocket-silo=Rocket silo capable of launching and deliverying payloads across vast interplanetary and interstellar distances.
 
 [modifier-description]
 nuclear-damage-bonus=Nuclear damage: +__1__
 icbm-guidance-damage-bonus=Deviation Chance: __1__
+icbm-top-speed-damage-bonus=Top Speed: +__1__
 
 [recipe-name]
 atomic-warhead=Atomic Warhead
 rocket-contorl-unit=Rocket Control Unit
+advanced-rocket-control-unit=Advanced Rocket Control Unit
+ipbm-rocket-silo=Interplanetary Ballistic Rocket Silo
+
+ipbm-rocket-part-dummy=Interplanetary Rocket Part
+ipbm-rocket-part-basic=Interplanetary Rocket Part
+ipbm-rocket-part-intermediate=Interplanetary Ballistic Rocket Part
+ipbm-rocket-part-advanced=Interplanetary Ballistic Rocket Part
+ipbm-rocket-part-beyond=Interplanetary Ballistic Rocket Part
+ipbm-rocket-part-beyond-2=Interplanetary Ballistic Rocket Part
+
+se-ipbm-rocket-silo=Ballistic Rocket Silo
+se-ipbm-rocket-part-dummy=Ballistic Rocket Part
+se-ipbm-rocket-part-basic=Ballistic Rocket Part
+se-ipbm-rocket-part-intermediate=Ballistic Rocket Part
+se-ipbm-rocket-part-advanced=Ballistic Rocket Part
+se-ipbm-rocket-part-beyond=Ballistic Rocket Part
+
 
 [technology-name]
 atomic-warhead=Atomic Warhead
@@ -32,10 +70,14 @@ nuclear-damage=Nuclear Weapons Damage
 guidance-systems=Guidance Systems
 rocket-control-unit=Rocket Control Unit
 icbms=Intercontinental Ballistic Missiles
+ipbms=Interplanetary Ballistic Missiles
+se-ipbms=Interplanetary and Interstellar Ballistic Missiles
 
 [technology-description]
 atomic-warhead=Allows the crafting of atomic warheads[item=atomic-warhead]; launchable via a rocket silo[entity=rocket-silo] at a designated target via the ICBM remote[item=ICBM-remote] or via a circuit network.
 nuclear-damage=Increases the damage of nuclear based weaponry.
 icbms=Unlocks the ability to use rocket silos for more than just logistics via the [item=ICBM-remote]
-guidance-systems=Improves the guidance systems of ICBMS: reduces the target deviation chance, and increases the top speed at which ICBMs can travel.
+ipbms=Unlocks a rocket silo capable of launching and deliverying payloads to another planet.
+se-ipbms=Unlocks a rocket silo capable of launching and deliverying payloads across vast interplanetary and interstellar distances.
+guidance-systems=Improves the guidance systems of ballistic missiles: reduces the target deviation chance, and increases the top speed at which they can travel.
 rocket-control-unit=Allows the crafting of rocket control units [item=rocket-control-unit]
