--- a/configurable-nukes/locale/en/messages.cfg
+++ b/configurable-nukes/locale/en/messages.cfg
@@ -1,7 +1,15 @@
 [icbm-utils]
-launch-initiated=Target designated: [gps=__1__,__2__,__5__]; Launch initiated: [gps=__3__,__4__,__5__]
+launch-initiated=Target designated: [gps=__1__,__2__,__5__]; Launch initiated: [gps=__3__,__4__,__6__]
 seconds-to-target=Seconds to Target: __1__
 
 [configurable-nukes-controller]
 seconds-to-target=Seconds to Target: __1__
 seconds-to-target-gps=Seconds to Target: __1__ [gps=__2__,__3__,__4__]
+
+[initialization]
+init=Initializing Configurable Nukes
+reinit=Reinitializing Configurable Nukes
+initialization-anew=__1__: Initializing anew
+initialization-complete=__1__: Initialization complete
+migrate-start=__1__: Migrating existing data
+migrate-finish=__1__: Migration complete
