bug-fix/0.5.x Made ballistic-rocket-parts configurable via 'startup' settings; i.e. exposed item and recipe properties

--- a/configurable-nukes/locale/en/items.cfg
+++ b/configurable-nukes/locale/en/items.cfg
@@ -13,6 +13,9 @@ configurable-nukes-rocket-control-unit-cooldown-modifier=[item=rocket-control-un
 configurable-nukes-rocket-control-unit-stack-size=[item=rocket-control-unit]Stack size
 configurable-nukes-rocket-control-unit-weight-modifier=[item=rocket-control-unit]Weight modifier
 
+configurable-nukes-ballistic-rocket-part-stack-size=[item=rocket-part]Stack size
+configurable-nukes-ballistic-rocket-part-weight-modifier=[item=rocket-part]Weight modifier
+
 [mod-setting-description]
 configurable-nukes-cooldown-modifier=Multiplier of the cooldown between shots.\n\ni.e. The lower this number, the faster nukes can be fired.
 configurable-nukes-atomic-bomb-weight-modifier=Multiplier of the default weight of a atomic-rocket\n\n i.e. default = 1.5 * tons
