--- a/configurable-nukes/locale/en/locale.cfg
+++ b/configurable-nukes/locale/en/locale.cfg
@@ -49,8 +49,8 @@ rocket-contorl-unit=Rocket Control Unit
 advanced-rocket-control-unit=Advanced Rocket Control Unit
 ipbm-rocket-silo=Interplanetary Ballistic Rocket Silo
 
-ipbm-rocket-part-dummy=Interplanetary Rocket Part
-ipbm-rocket-part-basic=Interplanetary Rocket Part
+ipbm-rocket-part-dummy=Interplanetary Ballistic Rocket Part
+ipbm-rocket-part-basic=Interplanetary Ballistic Rocket Part
 ipbm-rocket-part-intermediate=Interplanetary Ballistic Rocket Part
 ipbm-rocket-part-advanced=Interplanetary Ballistic Rocket Part
 ipbm-rocket-part-beyond=Interplanetary Ballistic Rocket Part
