--- a/configurable-nukes/locale/en/startup.cfg
+++ b/configurable-nukes/locale/en/startup.cfg
@@ -37,13 +37,38 @@ configurable-nukes-ipbms-research-ingredients=[technology=ipbms]Science packs re
 configurable-nukes-ipbms-research-time=[technology=ipbms]Time per science pack for IPBMs research
 configurable-nukes-ipbms-research-count=[technology=ipbms]Research count for IPBMs research
 
-configurable-nukes-rocket-control-unit-recipe=[item=rocket-control-unit]Basic Recipe
+configurable-nukes-rocket-control-unit-recipe=[item=rocket-control-unit]Basic recipe
 configurable-nukes-rocket-control-unit-recipe-allow-none=[item=rocket-control-unit]Allow no recipe
 configurable-nukes-rocket-control-unit-crafting-machine=[item=rocket-control-unit]Rocket control unit crafting machine
 configurable-nukes-rocket-control-unit-additional-crafting-machines=[item=rocket-control-unit]Additional rocket control unit crafting machines
 
-configurable-nukes-advanced-rocket-control-unit-recipe=[item=rocket-control-unit]Advanced Recipe
+configurable-nukes-advanced-rocket-control-unit-recipe=[item=rocket-control-unit]Advanced recipe
 configurable-nukes-advanced-rocket-control-unit-crafting-machine=[item=rocket-control-unit]Advanced crafting machine
+
+configurable-nukes-ballistic-rocket-part-recipe=[item=rocket-part]Ballistic rocket part basic cecipe
+configurable-nukes-ballistic-rocket-part-recipe-allow-none=[item=rocket-part]Ballistic rocket part allow no recipe
+configurable-nukes-ballistic-rocket-part-crafting-machine=[item=rocket-part]Ballistic rocket part crafting machine
+configurable-nukes-ballistic-rocket-part-additional-crafting-machines=[item=rocket-part]Ballistic rocket part additional crafting machines
+
+configurable-nukes-intermediate-ballistic-rocket-part-recipe=[item=rocket-part]Intermediate recipe
+configurable-nukes-intermediate-ballistic-rocket-part-recipe-allow-none=[item=rocket-part]Intermediate allow no recipe
+configurable-nukes-intermediate-ballistic-rocket-part-crafting-machine=[item=rocket-part]Intermediate crafting machine
+configurable-nukes-intermediate-ballistic-rocket-part-additional-crafting-machines=[item=rocket-part]Intermediate, additional crafting machines
+
+configurable-nukes-advanced-ballistic-rocket-part-recipe=[item=rocket-part]Advanced recipe
+configurable-nukes-advanced-ballistic-rocket-part-recipe-allow-none=[item=rocket-part]Advanced allow no recipe
+configurable-nukes-advanced-ballistic-rocket-part-crafting-machine=[item=rocket-part]Advanced crafting machine
+configurable-nukes-advanced-ballistic-rocket-part-additional-crafting-machines=[item=rocket-part]Advanced, additional crafting machines
+
+configurable-nukes-beyond-ballistic-rocket-part-recipe=[item=rocket-part]Beyond recipe
+configurable-nukes-beyond-ballistic-rocket-part-recipe-allow-none=[item=rocket-part]Beyond allow no recipe
+configurable-nukes-beyond-ballistic-rocket-part-crafting-machine=[item=rocket-part]Beyond crafting machine
+configurable-nukes-beyond-ballistic-rocket-part-additional-crafting-machines=[item=rocket-part]Beyond, additional crafting machines
+
+configurable-nukes-beyond-2-ballistic-rocket-part-recipe=[item=rocket-part]Beyond alternative, recipe
+configurable-nukes-beyond-2-ballistic-rocket-part-recipe-allow-none=[item=rocket-part]Beyond alternative, allow no recipe
+configurable-nukes-beyond-2-ballistic-rocket-part-crafting-machine=[item=rocket-part]Beyond alternative, crafting machine
+configurable-nukes-beyond-2-ballistic-rocket-part-additional-crafting-machines=[item=rocket-part]Beyond alternative, additional crafting machines
 
 configurable-nukes-rocket-control-unit-research-prerequisites=[item=rocket-control-unit]Prerequisite technology to rocket-control-unit research
 configurable-nukes-rocket-control-unit-research-ingredients=[item=rocket-control-unit]Science packs required for rocket-control-unit reseach
