bug-fix/0.5.x Updated changelog (format was invalid -> duplicate line); added missing mod-setting descriptions

--- a/configurable-nukes/locale/en/recipe.cfg
+++ b/configurable-nukes/locale/en/recipe.cfg
@@ -46,3 +46,19 @@ configurable-nukes-rocket-control-unit-result-count=Number of items created per 
 
 configurable-nukes-advanced-rocket-control-unit-crafting-time=Crafting time in seconds
 configurable-nukes-advanced-rocket-control-unit-result-count=Number of items created per crafting cycle
+
+
+configurable-nukes-ballistic-rocket-part-crafting-time=Crafting time in seconds
+configurable-nukes-ballistic-rocket-part-result-count=Number of items created per crafting cycle
+
+configurable-nukes-intermediate-ballistic-rocket-part-crafting-time=Crafting time in seconds
+configurable-nukes-intermediate-ballistic-rocket-part-result-count=Number of items created per crafting cycle
+
+configurable-nukes-advanced-ballistic-rocket-part-crafting-time=Crafting time in seconds
+configurable-nukes-advanced-ballistic-rocket-part-result-count=Number of items created per crafting cycle
+
+configurable-nukes-beyond-ballistic-rocket-part-crafting-time=Crafting time in seconds
+configurable-nukes-beyond-ballistic-rocket-part-result-count=Number of items created per crafting cycle
+
+configurable-nukes-beyond-2-ballistic-rocket-part-crafting-time=Crafting time in seconds
+configurable-nukes-beyond-2-ballistic-rocket-part-result-count=Number of items created per crafting cycle
