bug-fix/0.5.x Made ipbm-rocket-silo item/recipe configurable via 'Startup' settings; ipbm-rocket-silo and ipbm-rocket-part are both now recycleable

--- a/configurable-nukes/locale/en/recipe.cfg
+++ b/configurable-nukes/locale/en/recipe.cfg
@@ -14,6 +14,10 @@ configurable-nukes-rocket-control-unit-result-count=[item=rocket-control-unit]Re
 configurable-nukes-advanced-rocket-control-unit-crafting-time=[item=rocket-control-unit]Advanced recipe crafting time
 configurable-nukes-advanced-rocket-control-unit-result-count=[item=rocket-control-unit]Advanced recipe result count
 
+configurable-nukes-ballistic-rocket-silo-crafting-time=[item=ipbm-rocket-silo]Ballistic rocket silo crafting time
+configurable-nukes-ballistic-rocket-silo-input-multiplier=[item=ipbm-rocket-silo]Ballistic rocket silo input multiplier
+configurable-nukes-ballistic-rocket-silo-result-count=[item=ipbm-rocket-silo]Ballistic rocket silo result count
+
 configurable-nukes-ballistic-rocket-part-crafting-time=[item=rocket-part]Ballistic rocket part crafting time
 configurable-nukes-ballistic-rocket-part-input-multiplier=[item=rocket-part]Ballistic rocket part input multiplier
 configurable-nukes-ballistic-rocket-part-result-count=[item=rocket-part]Ballistic rocket part result count
@@ -47,6 +51,8 @@ configurable-nukes-rocket-control-unit-result-count=Number of items created per 
 configurable-nukes-advanced-rocket-control-unit-crafting-time=Crafting time in seconds
 configurable-nukes-advanced-rocket-control-unit-result-count=Number of items created per crafting cycle
 
+configurable-nukes-ballistic-rocket-silo-crafting-time=Crafting time in seconds
+configurable-nukes-ballistic-rocket-silo-result-count=Number of items created per crafting cycle
 
 configurable-nukes-ballistic-rocket-part-crafting-time=Crafting time in seconds
 configurable-nukes-ballistic-rocket-part-result-count=Number of items created per crafting cycle
