--- a/configurable-nukes/locale/en/startup.cfg
+++ b/configurable-nukes/locale/en/startup.cfg
@@ -45,6 +45,11 @@ configurable-nukes-rocket-control-unit-additional-crafting-machines=[item=rocket
 configurable-nukes-advanced-rocket-control-unit-recipe=[item=rocket-control-unit]Advanced recipe
 configurable-nukes-advanced-rocket-control-unit-crafting-machine=[item=rocket-control-unit]Advanced crafting machine
 
+configurable-nukes-ballistic-rocket-silo-recipe=[item=ipbm-rocket-silo]Ballistic rocket silo recipe
+configurable-nukes-ballistic-rocket-silo-recipe-allow-none=[item=ipbm-rocket-silo]Ballistic rocket silo allow no recipe
+configurable-nukes-ballistic-rocket-silo-crafting-machine=[item=ipbm-rocket-silo]Ballistic rocket silo crafting machine
+configurable-nukes-ballistic-rocket-silo-additional-crafting-machines=[item=ipbm-rocket-silo]Ballistic rocket silo additional crafting machines
+
 configurable-nukes-ballistic-rocket-part-recipe=[item=rocket-part]Ballistic rocket part basic recipe
 configurable-nukes-ballistic-rocket-part-recipe-allow-none=[item=rocket-part]Ballistic rocket part allow no recipe
 configurable-nukes-ballistic-rocket-part-crafting-machine=[item=rocket-part]Ballistic rocket part crafting machine
@@ -122,6 +127,10 @@ configurable-nukes-ipbms-research-count=Defines how many research cycles are nee
 configurable-nukes-rocket-control-unit-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...\n\ne.g.\n    processing-unit=4,speed-module=2,efficiency-module=2,radar=1,battery=8
 configurable-nukes-rocket-control-unit-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting of warheads if no ingredients are provided in the "Recipe" setting.
 configurable-nukes-rocket-control-unit-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
+
+configurable-nukes-ballistic-rocket-silo-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...
+configurable-nukes-ballistic-rocket-silo-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting if no ingredients are provided in the "Recipe" setting.
+configurable-nukes-ballistic-rocket-silo-additional-crafting-machines=Comma separated list of machine categories. Allows different machines to craft the same recipe.
 
 configurable-nukes-ballistic-rocket-part-recipe=Defines the ingredients and amounts of each required for one crafting cycle. Expected syntax is as follows:\n\n    item-name-1=amount-1,item-name-2=amount-2, etc...
 configurable-nukes-ballistic-rocket-part-recipe-allow-none=When disabled, if none of the provided ingredients are found, then the default recipe will be used.\n\nWhen enabled, allows for free crafting if no ingredients are provided in the "Recipe" setting.
