feature/0.6.x Fixed several bugs, related to: mining/destroying a rocket shortly after initiating a launch; rocket silos not checking both red and green circuit-networks; rocket silos not being tracked when built/mined by a platform; error when targeting the EE debug surface; lag spike when loading into the game, specifically loading into Space-Exploration should better. Improved performance of silo searching when a launch is manually initiated; added support for circuit-network launching a rocket silo from one surface to another: can manually select a surface, or provide an index via a signal; moved some loading/initialization logic to more appropriate events;

--- a/configurable-nukes/locale/en/gui.cfg
+++ b/configurable-nukes/locale/en/gui.cfg
@@ -1,8 +1,15 @@
 [cn-launch-signal-gui]
 title=ICBMs
-signal_launch=Launch Signal
-signal_x=X Coord
-signal_y=Y Coord
-signal_origin_override=Origin Override
-planet=Planet
-list-item=[planet=__1__] __1__
+signal-launch=Launch Signal
+signal-x=X Coord
+signal-y=Y Coord
+signal-launch-tooltip=Checks the selected signal for a value of 1 or greater to attempt to initaite a launch.
+signal-origin-override=Origin Override
+signal-origin-override-tooltip=Provide the selected signal with a value of 1 or greater to allow a launch at the origin.
+signal-space-location-index=Surface Index Signal
+require-space-location=Surface Selection Required
+require-space-location-tooltip=If a surface must be explicitly provided or not.\n\nIf checked, the given silo cannot initiate a launch unless a surface is explicitly selected, or provided via circuit-network signal.\n\nIf unchecked, and no surface is selected or provided via circuit-network signal, then the surface the silo is on is assumed to be the target surface.
+space-location=Surface Selection
+list-item-none=
+se-list-item=__1__ - __2__
+list-item=[planet=__2__] __2__ - __1__
