--- a/configurable-nukes/locale/en/messages.cfg
+++ b/configurable-nukes/locale/en/messages.cfg
@@ -5,6 +5,7 @@ seconds-to-target=Seconds to Target: __1__
 [configurable-nukes-controller]
 seconds-to-target=Seconds to Target: __1__
 seconds-to-target-gps=Seconds to Target: __1__ [gps=__2__,__3__,__4__]
+on-configuration-changed=__1__: Version change detected
 
 [initialization]
 init=Initializing Configurable Nukes
