--- a/configurable-nukes/locale/en/runtime-global.cfg
+++ b/configurable-nukes/locale/en/runtime-global.cfg
@@ -41,6 +41,8 @@ configurable-nukes-icbms-circuit-print-launch-messages=[item=constant-combinator
 configurable-nukes-icbms-circuit-print-delivery-messages=[item=constant-combinator]Print circuit initiated delivery messages
 configurable-nukes-icbms-circuit-print-pin-targets=[item=constant-combinator]Pin circuit designated targets
 
+configurable-nukes-circuit-allow-launch-when-no-surface-selected=[item=constant-combinator]Allow circuit initiated launches with no surface selected
+
 configurable-nukes-num-surfaces-processed-per-tick=Number of surfaces processed per tick
 
 [mod-setting-description]
@@ -69,5 +71,7 @@ configurable-nukes-icbms-circuit-allow-targeting-origin=Target coordinates of {0
 configurable-nukes-icbms-circuit-print-launch-messages=Whether to display a message of the target destination and source rocket silo, or not, when an ICBM is launched successfully via a circuit network.
 configurable-nukes-icbms-circuit-print-delivery-messages=Whether to display a message of the target destination, or not, when a circuit network launched ICBM's payload is delivered.
 configurable-nukes-icbms-circuit-print-pin-targets=Whether to create a map pin at the designated target, or not, when an ICBM is launched successfully via a circuit network.
+
+configurable-nukes-circuit-allow-launch-when-no-surface-selected=When attempting to initiate a launch via a circuit-network, whether to allow launching at the rocket-silo's origin surface, or not, without needing to select a surface from the dropdown.
 
 configurable-nukes-num-surfaces-processed-per-tick=The amount of surfaces to process per tick cycle.\n\ni.e. How many surfaces to check if a payload is ready to be delivered per tick cycle.\n\nThe higher the number, the more accurate payload delivery time will be - but may also reduce performance if set too high.
