bug-fix/0.6.x kr-nuclear-turret-rockets and kr-nuclear-artillery-shells are now configurable and affected by quality; added base and bonus runtime damage settings for both; created/added new nuclear-artillery ammo-category to allow for nuclear weapons research to also improve nuclear-artillery-shells, without mixing who can fire what type of ammo; added icons to the potential pollution causing entities so the icon shows in the pollution graph

--- a/configurable-nukes/locale/en/locale.cfg
+++ b/configurable-nukes/locale/en/locale.cfg
@@ -1,13 +1,18 @@
 [ammo-category-name]
 nuclear=Nuclear
+nuclear-artillery=Nuclear Artillery
 
 [ammo-category]
 nuclear=Nuclear
 
 [entity-name]
 atomic-rocket=Atomic Bomb
+atomic-warhead=Atomic Warhead
 ipbm-rocket-silo=Interplanetary Ballistic Rocket Silo
 se-ipbm-rocket-silo=Ballistic Rocket Silo
+# K2SO
+kr-atomic-artillery-projectile=Nuclear Artillery
+kr-nuclear-turret-rocket-projectile=Nuclear Turret Rocket
 
 [entity-description]
 atomic-warhead=Expensive yet devastating form of weaponry. Even more powerful version of the atomic bomb, but only fireable from a rocket-silo via an ICBM-remote [item=ICBM-remote] or via a circuit network.
@@ -40,6 +45,7 @@ se-ipbm-rocket-silo=Rocket silo capable of launching and deliverying payloads ac
 
 [modifier-description]
 nuclear-damage-bonus=Nuclear damage: +__1__
+nuclear-artillery-damage-bonus=Nuclear artillery damage: +__1__
 icbm-guidance-damage-bonus=Deviation Chance: __1__
 icbm-top-speed-damage-bonus=Top Speed: +__1__
 
