--- a/configurable-nukes/locale/en/runtime-global.cfg
+++ b/configurable-nukes/locale/en/runtime-global.cfg
@@ -1,7 +1,7 @@
 [mod-setting-name]
 configurable-nukes-atomic-bomb-rocket-launchable=[item=atomic-bomb]Launchable via rocket-silo
-configurable-nukes-pollution=[item=atomic-bomb]Pollution
-configurable-nukes-atomic-warhead-pollution=[item=atomic-warhead]Pollution
+configurable-nukes-pollution=[item=atomic-bomb]Atomic bomb pollution
+configurable-nukes-atomic-warhead-pollution=[item=atomic-warhead]Atomic warhead pollution
 
 configurable-nukes-atomic-bomb-base-damage-modifier=[item=atomic-bomb]Base damage modifier
 configurable-nukes-atomic-bomb-base-damage-addition=[item=atomic-bomb]Base damage addition
