--- a/configurable-nukes/locale/en/messages.cfg
+++ b/configurable-nukes/locale/en/messages.cfg
@@ -14,3 +14,9 @@ initialization-anew=__1__: Initializing anew
 initialization-complete=__1__: Initialization complete
 migrate-start=__1__: Migrating existing data
 migrate-finish=__1__: Migration complete
+
+[rocket-silo-utils]
+scrub-launch=Scrubbing launch: __1__
+
+[rocket-silo-service]
+scrub-all-launches=Scrubbing all launches
