feature/0.7.x Added 'on_init' to the event_handler; created a simple gui dashboard that shows information about current in-flight rockets/payloads; partially related to the dashboard, started creating and using custom events; cleaned up on_tick event some in configurable-nukes-controller; updated some messeges to include the target-num

--- a/configurable-nukes/locale/en/messages.cfg
+++ b/configurable-nukes/locale/en/messages.cfg
@@ -1,10 +1,12 @@
 [icbm-utils]
-launch-initiated=Target designated: [gps=__1__,__2__,__5__]; Launch initiated: [gps=__3__,__4__,__6__]
-seconds-to-target=Seconds to Target: __1__
+launch-initiated=Target-__1__ designated: [gps=__2__,__3__,__6__]; Launch initiated: [gps=__4__,__5__,__7__]
+# seconds-to-target=Seconds to Target: __1__
+seconds-to-target=Seconds to Target-__1__: __2__
+space-launch-seconds-to-target=Seconds to Target-__2__: __1__
 
 [configurable-nukes-controller]
-seconds-to-target=Seconds to Target: __1__
-seconds-to-target-gps=Seconds to Target: __1__ [gps=__2__,__3__,__4__]
+seconds-to-target=Seconds to Target-__1__: __2__
+seconds-to-target-gps=Seconds to Target-__1__: __2__ [gps=__3__,__4__,__5__]
 on-configuration-changed=__1__: Version change detected
 
 [initialization]
