--- a/configurable-nukes/locale/en/gui.cfg
+++ b/configurable-nukes/locale/en/gui.cfg
@@ -13,3 +13,19 @@ space-location=Surface Selection
 list-item-none=
 se-list-item=__1__ - __2__
 list-item=[planet=__2__] __2__ - __1__
+
+[cn-rocket-dashboard]
+button-open=Open Rocket Dashboard
+source-silo=Target-__1__: Source Silo
+destination=Target-__1__: Destination
+gps=[gps=__1__,__2__,__3__]
+
+[cn-rocket-dashboard-headers]
+target-num=Target-#
+source=Source
+destination=Destination
+time-remaining=Time (s)
+scrub=Scrub
+
+[cn-rocket-dashboard-data]
+target-num=Target-__1__
