feature/0.7.x First version of the dashboard complete: persistent gui button to toggle; custom-input also toggles it; can be pinned so it does not close when another gui is selected or opened; custom-input click centers the gui; clicking on 'source' or 'destination' labels will ping their respective coordinates; time shows a countdown until payload delivery; scrub button scrubs the given launch; added configurable runtime setting for the refresh rate of the gui; fixed decimal values being potentially passed to/saved by the event_handler for the 'on_nth_tick' event (if decimals were present, event would fail to register silently)

--- a/configurable-nukes/locale/en/runtime-global.cfg
+++ b/configurable-nukes/locale/en/runtime-global.cfg
@@ -45,6 +45,8 @@ configurable-nukes-circuit-allow-launch-when-no-surface-selected=[item=constant-
 
 configurable-nukes-num-surfaces-processed-per-tick=Number of surfaces processed per tick
 
+configurable-nukes-dashboard-refresh-rate=Dashboard refresh rate
+
 [mod-setting-description]
 configurable-nukes-atomic-bomb-rocket-launchable=Whether atomic-bombs can be launched as payload from a rocket-silo.
 
@@ -75,3 +77,5 @@ configurable-nukes-icbms-circuit-print-pin-targets=Whether to create a map pin a
 configurable-nukes-circuit-allow-launch-when-no-surface-selected=When attempting to initiate a launch via a circuit-network, whether to allow launching at the rocket-silo's origin surface, or not, without needing to select a surface from the dropdown.
 
 configurable-nukes-num-surfaces-processed-per-tick=The amount of surfaces to process per tick cycle.\n\ni.e. How many surfaces to check if a payload is ready to be delivered per tick cycle.\n\nThe higher the number, the more accurate payload delivery time will be - but may also reduce performance if set too high.\n\nSimilarly, the same considerations apply to circuit-network connected silos: i.e. the higher number, the more responsive and exact circuit-network processing will be, with the trade-off of potentially inferior overall performance.
+
+configurable-nukes-dashboard-refresh-rate=Rate at which the dashboard GUI is updated. Affects how up-to-date the "Time" column of the dashboard is.\n\ni.e. The dashboard is refreshed every 'n' ticks, where 'n' is the value from this setting.
