--- a/configurable-nukes/locale/en/custom-input.cfg
+++ b/configurable-nukes/locale/en/custom-input.cfg
@@ -2,3 +2,4 @@
 scrub-newest-launch=Scrub newest launch
 scrub-oldest-launch=Scrub oldest launch
 scrub-all-launches=Scrub all launches
+toggle-dashboard=Toggle [item=ICBM-remote] Dashboard
